--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -8,9 +8,7 @@
                     <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
                     <input type="hidden" id="page" name="page" value="{{conventions.page}}">
                     <div class="fr-grid-row fr-grid-row--gutters">
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-5 fr-mb-2w">
-                            <input class="fr-input" placeholder="par nom, code d’opération ou ville" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
-                        </div>
+                        {# Champs Statut #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                             <div class="fr-select-group">
                                 <select class="fr-select" id="cstatut" name="cstatut">
@@ -24,6 +22,7 @@
                                 </select>
                             </div>
                         </div>
+                        {# Champs financement #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                             <div class="fr-select-group">
 
@@ -38,6 +37,63 @@
                                 </select>
                             </div>
                         </div>
+
+                        {# Champs "recherche libre" #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-5 fr-mb-2w">
+                            <input class="fr-input" placeholder="par nom, code d’opération ou ville" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
+                        </div>
+
+                        {# Champs commune #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <div class="fr-select-group">
+                                <select class="fr-select" name="commune" id="search-field-commune">
+                                </select>
+                            </div>
+                        </div>
+
+                        {# Champs bailleur #}
+                        {% if bailleur_query %}
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                                <div class="fr-select-group">
+                                    {% url 'users:search_bailleur' as search_bailleur_url %}
+                                    <select class="fr-select" name="bailleur" id="search-field-bailleur">
+                                        {% if conventions.bailleur %}
+                                            <option selected value="{{ conventions.bailleur.uuid }}">{{ conventions.bailleur }}</option>
+                                        {% else %}
+                                            <option selected value>Bailleur</option>
+                                            {% for bailleur in bailleur_query %}
+                                                <option value="{{ bailleur.uuid }}">
+                                                    {{ bailleur }}
+                                                </option>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </select>
+                                </div>
+                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                    VirtualSelect.init({
+                                        ele: '#search-field-bailleur',
+                                        search: true,
+                                        placeholder: "Bailleur",
+                                        selectedValue: null,
+                                        searchPlaceholderText: "Nom du bailleur",
+                                        onServerSearch: function (search, select) {
+                                            fetch('{{ search_bailleur_url }}?q=' + search)
+                                                .then((response) => response.json())
+                                                .then(data => select.setServerOptions(data));
+                                        },
+                                    });
+                                </script>
+                            </div>
+                        {% endif %}
+
+                        {# Champs administration #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <div class="fr-select-group">
+                                <select class="fr-select" name="commune" id="search-field-commune">
+                                </select>
+                            </div>
+                        </div>
+
                         <div class="fr-col-1 fr-grid-row fr-grid-row--right">
                             <button class="fr-btn fr-fi-search-line" title="Rechercher" id="search_btn">
                             </button>
