--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-    {% with programme_uuid=programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=lot.uuid|slugify ecolo_ref=convention.ecolo_reference %}
+    {% with programme_uuid=convention.programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=convention.lot.uuid|slugify ecolo_ref=convention.ecolo_reference %}
         <input type="hidden" id="convention_uuid" value="{{convention.uuid}}">
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html"%}
@@ -69,22 +69,22 @@
                         {% endif %}
                     {% endif %}
                 {% else %}
-                    {% include "conventions/recapitulatif/bailleur.html"  with target_url='conventions:bailleur'%}
-                    {% include "conventions/recapitulatif/operation.html" with target_url='conventions:programme'%}
-                    {% include "conventions/recapitulatif/references_cadastrales.html"  with target_url='conventions:references_cadastrales'%}
+                    {% include "conventions/recapitulatif/bailleur.html"  with target_url='conventions:bailleur' bailleur=convention.bailleur %}
+                    {% include "conventions/recapitulatif/operation.html" with target_url='conventions:programme' programme=convention.programme lot=convention.lot %}
+                    {% include "conventions/recapitulatif/references_cadastrales.html"  with target_url='conventions:references_cadastrales' programme=convention.programme reference_cadastrales=convention.programme.referencecadastrales.all %}
                     {%  if not ecolo_ref %}
-                        {% include "conventions/recapitulatif/edd.html"  with target_url='conventions:edd'%}
+                        {% include "conventions/recapitulatif/edd.html"  with target_url='conventions:edd' programme=convention.programme lot=convention.lot logement_edds=convention.programme.logementedds.all %}
                         {% include "conventions/recapitulatif/financement.html" with target_url='conventions:financement' %}
                     {% endif %}
-                    {% include "conventions/recapitulatif/logements.html" with target_url='conventions:logements' %}
-                    {% include "conventions/recapitulatif/foyer_residence_logements.html" with target_url='conventions:foyer_residence_logements' %}
-                    {% include "conventions/recapitulatif/collectif.html" with target_url='conventions:collectif' %}
+                    {% include "conventions/recapitulatif/logements.html" with target_url='conventions:logements' lot=convention.lot logements=convention.lot.logements.all %}
+                    {% include "conventions/recapitulatif/foyer_residence_logements.html" with target_url='conventions:foyer_residence_logements' lot=convention.lot logements=convention.lot.logements.all %}
+                    {% include "conventions/recapitulatif/collectif.html" with target_url='conventions:collectif' lot=convention.lot %}
                     {%  if not ecolo_ref %}
-                        {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:annexes' %}
+                        {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:annexes' annexes=convention.lot.annexes.all lot=convention.lot %}
                     {% else %}
                         {% include "conventions/recapitulatif/pieces_jointes.html" %}
                     {% endif %}
-                    {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' %}
+                    {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' stationnements=convention.lot.type_stationnements.all %}
                     {% include "conventions/recapitulatif/foyer_attribution.html" with target_url='conventions:foyer_attribution' %}
                     {% include "conventions/recapitulatif/residence_attribution.html" with target_url='conventions:residence_attribution' %}
                     {% include "conventions/recapitulatif/variantes.html" with target_url='conventions:variantes' %}
