--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -30,12 +30,12 @@
                                         </a>
                                         {% endcomment %}
                                     </div>
+                                    <div>
+                                        <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                            <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                                        </a>
+                                    </div>
                                 {% endif %}
-                                <div hidden>
-                                    <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                        <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                    </a>
-                                </div>
                             {% elif request|is_instructeur or request.user.is_superuser %}
                                 <div class="block--row-strech-1">
                                     <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
