--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -30,6 +30,8 @@
                                         </a>
                                         {% endcomment %}
                                     </div>
+                                {% endif %}
+                                {% if not request.user.is_staff %}
                                     <div>
                                         <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
                                             <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
