--- a/templates/403.html
+++ b/templates/403.html
@@ -6,10 +6,10 @@
                 <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
                     <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Problème de permissions</h2>
                     <p class="fr-mb-3w">
-                        Vous n'avez pas les droits pour executer cette action ou afficher cet écran
+                        Vous n'avez pas les droits pour exécuter cette action ou afficher cet écran
                     </p>
                     <p class="fr-mb-3w">
-                        N'hésitez pas nous prévenir si vos pensez que ce comportement n'est pas normale
+                        N'hésitez pas nous prévenir si vous pensez que ce comportement n'est pas normal
                     </p>
                     <p class="fr-mb-3w">
                         L'équipe <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">APiLos</a>
