--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -23,13 +23,9 @@
                                         <a class="fr-btn" href="{% url 'conventions:selection' %}">
                                             <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                                         </a>
-                                        {% comment %}
-                                        {#  Disable as there is no route to initialize avenant from zero yet #}
-                                        <a class="fr-btn fr-btn--secondary" href="{% url 'avenants:selection' %}">
-                                            <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                        </a>
-                                        {% endcomment %}
                                     </div>
+                                {% endif %}
+                                {% if not request.user.is_staff %}
                                     <div>
                                         <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
                                             <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
