--- a/templates/conventions/loyer.html
+++ b/templates/conventions/loyer.html
@@ -16,24 +16,20 @@
                         <div class="block--row-strech-1">
                             <h1 class="m-0">Conventions et avenants</h1>
                         </div>
-                        {% if not CERBERE_AUTH %}
+                        {% if not CERBERE_AUTH and not request.user.is_staff %}
                             <div class="fr-mr-3w">
                                 <a class="fr-btn" href="{% url 'conventions:selection' %}">
                                     <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                                 </a>
-                                {% comment %}
-                                {#  Disable as there is no route to initialize avenant from zero yet #}
-                                <a class="fr-btn fr-btn--secondary" href="{% url 'avenants:selection' %}">
-                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                </a>
-                                {% endcomment %}
                             </div>
                         {% endif %}
-                        <div hidden>
-                            <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                            </a>
-                        </div>
+                        {% if not request.user.is_staff %}
+                            <div>
+                                <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                                </a>
+                            </div>
+                        {% endif %}
                     {% elif request|is_instructeur or request.user.is_superuser %}
                         <div class="block--row-strech-1">
                             <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
