manage nb_logements in logement convention form step

--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -15,7 +15,8 @@
                         {% include "conventions/actions/goto.html" %}
                     </div>
                     <div class="block--row-strech">
-                        {% include "common/display_field_if_exists.html" with label="Nombre de logements" value=lot.nb_logements object_field="lot__nb_logements__"|add:lot_uuid %}
+                        {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements object_field="lot__nb_logements__"|add:lot_uuid %}
+
                     </div>
                     {% if logements %}
                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
