filtre authentification CERBERE

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -23,17 +23,19 @@
         {% include "layout/header_cerbere.html" %}
     {% endif %}
 </header>
-<div class="apilos-warning-band">
-    <div class="fr-container fr-p-4w">
-        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle">
-            <img class="fr-mr-3w"  src="{% static 'icons/warning.svg' %}" alt="warning">
-            <div>
-                <p class="fr-mb-0 fr-text--lead">Le SIAP sera prochainement votre unique porte d’entrée vers APiLos !</p>
-                <p class="fr-mb-0">Vous pourrez retrouver Apilos en vous connectant depuis le SIAP.
-                    <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank"  rel="noopener">En savoir plus</a>
+{% if not CERBERE_AUTH %}
+    <div class="apilos-warning-band">
+        <div class="fr-container fr-p-4w">
+            <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle">
+                <img class="fr-mr-3w"  src="{% static 'icons/warning.svg' %}" alt="warning">
+                <div>
+                    <p class="fr-mb-0 fr-text--lead">Le SIAP sera prochainement votre unique porte d’entrée vers APiLos !</p>
+                    <p class="fr-mb-0">Vous pourrez retrouver Apilos en vous connectant depuis le SIAP.
+                        <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank"  rel="noopener">En savoir plus</a>
 
-                </p>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+{% endif %}
