--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-<p>Télécharger le modèle, éditer puis téléverser vos {{ what }}.<br>
-    <span class="fr-icon-warning-line fr-mr-1w" aria-hidden="true"></span>Attention, la liste des {{ what }} téléversée écrase la liste courante.
+<p>Télécharger le modèle, éditer puis déposer vos {{ what }}.<br>
+    <span class="fr-icon-warning-line fr-mr-1w" aria-hidden="true"></span>Attention, la liste des {{ what }} déposée écrase la liste courante.
 </p>
 {% if file_type == "logements_edd" %}
     <p class="fr-mt-1w"><em>Depuis le 1er juin 2022, un nouveau format de fichier est entré en vigueur. La colonne "type des logements" a été remplacée par "numéro de lot". Vous pouvez mettre à jour votre fichier en téléchargeant le nouveau modèle puis en le téléversant à nouveau.</em></p>
@@ -22,7 +22,7 @@
 
     <div>
         <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-            Téléverser le fichier de vos {{ what }}
+            Déposer le fichier de vos {{ what }}
         </button>
         {% for error in upform.file.errors %}
             <p id="text-input-error-desc-error" class="fr-error-text">
