--- a/templates/conventions/avenant/complete_form_for_avenants.html
+++ b/templates/conventions/avenant/complete_form_for_avenants.html
@@ -16,7 +16,7 @@
                     {% if not convention.parent.nom_fichier_signe %}
                         <div class="fr-col-12">
                             <div class="fr-upload-group">
-                                <label class="fr-label" for="file-upload">Téléverser la convention initiale (en PDF)
+                                <label class="fr-label" for="file-upload">Déposer la convention initiale (en PDF)
                                     <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
                                 </label>
                                 <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe">
