--- a/templates/conventions/avenant/new_convention_for_avenant.html
+++ b/templates/conventions/avenant/new_convention_for_avenant.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="fr-upload-group fr-my-5w">
-            <label class="fr-label" for="file-upload">Téléverser la convention (en PDF)
+            <label class="fr-label" for="file-upload">Déposer la convention (en PDF)
                 <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
             </label>
             <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe">
