--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -1,6 +1,6 @@
 {% extends "layout/base.html" %}
 
-{% block page_title %} Téléversement - APiLos {% endblock%}
+{% block page_title %} Envoi - APiLos {% endblock%}
 
 {% load static %}
 
