--- a/templates/settings/import_bailleur_users.html
+++ b/templates/settings/import_bailleur_users.html
@@ -37,7 +37,7 @@
                                 data-input="file-upload-input"
                                 data-lock="file-upload-lock"
                             >
-                                Téléverser le fichier de listing bailleur
+                                Déposer le fichier de listing bailleur
                             </button>
 
                         </div>
